remove # from awb

--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -141,7 +141,7 @@
                   <input type="hidden" name="invoice.id" value="{ID}" />
                   <div class="col-md-6 col-sm-12">
                     <label>Invoice #</label>
-                    <input type="text" class="form-control invoice_number-{CID}" name="invoice.number" value="#9999"  />
+                    <input type="text" class="form-control invoice_number-{CID}" name="invoice.number" value="9999"  />
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
