--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -144,7 +144,7 @@
                   <input type="hidden" name="invoice.id" value="{ID}" />
                   <div class="col-md-6 col-sm-12">
                     <label>Invoice #</label>
-                    <input type="text" class="form-control" name="invoice.number" value="#9999" />
+                    <input type="text" class="form-control" name="invoice.number" value="9999" />
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
