--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -1,4 +1,17 @@
 <% layout('./shared/__template')%>
+
+<%
+var endate = new Date();      
+    endate.setDate(endate.getDate());
+    var stdate = new Date();
+    stdate.setDate(stdate.getDate() -1);      
+    var dateRangeDefault = (stdate.getMonth() + 1)+ '/'+stdate.getDate()+'/'+stdate.getFullYear()+' - '+
+    (endate.getMonth() + 1)+ '/'+endate.getDate()+'/'+endate.getFullYear(); 
+    if(query.clear){
+        dateRangeDefault = '';
+    }
+%>
+
 <style>
   table.dataTable tbody>tr.selected,
   table.dataTable tbody>tr>.selected {
@@ -26,7 +39,7 @@
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <div class="table-responsive">
           <table id="pricelabel-table"
-            class="display table table-striped table-hover dataTable dateRangeFilterTable pricelabel-table">
+            class="display table table-striped table-hover dataTable pricelabel-table">
             <thead>
               <tr>
                 <th></th>
@@ -47,7 +60,7 @@
               <tr data-record="<%= awb._id %>">
                 <td>
                   <input type="checkbox" class="package-select" />
-                  <input class="checkPriceLabelExistPkg" value="<%=awb._id %>" hidden />
+                  <!-- <input class="checkPriceLabelExistPkg" value="<%=awb._id %>" hidden /> -->
                 </td>
                 <td><%= helpers.formatDate(awb.createdAt)%></td>
                 <td><%=(awb.customerFullName)?awb.customerFullName:'-' %></td>
