--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -111,7 +111,7 @@
                 </div>
                 <div class="separator-solid"></div>
                 <div class="d-flex">
-                    <h3 class="card-title text-muted package-info">Data Entry ( Weight : <span id="lbs-data-entry">10</span> lbs / <span id="vlbs-data-entry"></span> vlbs )</h3>
+                    <h3 class="card-title text-muted package-info">Data Entry ( Weight : <span id="lbs-data-entry"><%= totalWeight %></span> lbs / <span id="vlbs-data-entry"></span> vlbs )</h3>
                 </div>
                 <div class='row mt-3'>
                     <div class='col-md-12 table-responsive'>
