--- a/views/pages/warehouse/cube/detail.ejs
+++ b/views/pages/warehouse/cube/detail.ejs
@@ -29,10 +29,10 @@
             </div>
 
             <div class="form-group form-show-validation row">
-              <label for="AWBNO" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">AWB No</label>
+              <label for="AWBNO" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Cube AWB No</label>
               <div class="col-lg-8 col-md-8 col-sm-8">
                 <input type='text' class='form-control' id='AWBNO' placeholder="AWBNO"
-                  value="<%= cube.awbId%>" readonly />
+                  value="C<%= cube.cubeAwbId.cubeAwbNo%>" readonly />
               </div>
             </div>            
           </div>
