--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,7 +34,7 @@
 		<div class="login-aside w-50 d-flex align-items-center justify-content-center bg-white">
 			<div class="container container-login container-transparent animated fadeIn">
 				<img src="/img/logo.jpg">
-				<h3 class="text-center mt-3">Sign In To Customer</h3>
+				<h3 class="text-center mt-3">Welcome to Customer Portal</h3>
 				<form id="customer-login-form">
 					<div class="login-form">
 						<div class="form-group">
@@ -43,7 +43,7 @@
 						</div>
 						<div class="form-group">
 							<label for="password" class="placeholder"><b>Password</b></label>
-							<a href="#" class="link float-right forgot-password">Forget Password ?</a>
+							<a href="#" class="link float-right forgot-password">Forgot Password ?</a>
 							<div class="position-relative">
 								<input id="password" placeholder="Password" name="password" type="password" class="form-control"
 									required>
