--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -31,6 +31,13 @@
 						<p>Dashboard </p>
 					</a>
 				</li>
+
+				<li class="nav-section">
+					<span class="sidebar-mini-icon">
+						<i class="fa fa-ellipsis-h"></i>
+					</span>
+					<h4 class="text-section">Reports</h4>
+				</li>
 				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
 					<a href="/report">
 						<i class="fa fa-file"></i>
@@ -39,7 +46,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/reports/all-report/download')) { %> active <% } %>">
 					<a href="/reports/all-report/download">
-						<i class="fa fa-user"></i>
+						<i class="fa fa-download"></i>
 						<p>My Reports </p>
 					</a>
 				</li>
@@ -531,12 +538,14 @@
 						</ul>
 					</div>
 				</li>
-				<li class="nav-item">
-					<a id="logout" href="/logout<% if (user.roles[0].type == "Customers") { %>?type=customer<%}%>">
-						<i class="fa fa-sign-out-alt"></i>
-						<p>Logout </p>
-					</a>
-				</li>
+				<% if (user.roles[0].type != "Customers"){ %>
+					<li class="nav-item">
+						<a id="logout" href="/logout<% if (user.roles[0].type == "Customers") { %>?type=customer<%}%>">
+							<i class="fa fa-sign-out-alt"></i>
+							<p>Logout </p>
+						</a>
+					</li>
+				<%}%>
 			</ul>
 		</div>
 	</div>
