--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -250,7 +250,7 @@
 		<%}else{%>
 			<div style="position: absolute;right: 0; margin-right:10px; font-size: 16px;">
 				<a id="logout" style="color:white" href="/logout<% if (user.roles[0].type == "Customers") { %>?type=customer<%}%>">
-					<i class="fa fa-sign-out-alt"></i> Logout 
+					<i class="fa fa-sign-out-alt"></i> 
 					<!-- <p></p> -->
 				</a>
 			</div>
