--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,7 @@
 						</div>
 						<div class="form-group">
 							<label for="password" class="placeholder"><b>Password</b></label>
-							<a href="#" class="link float-right forgot-password">Forgot Password ?</a>
+							<a href="#" class="link float-right forgot-password">Forgot Password?</a>
 							<div class="position-relative">
 								<input id="password" placeholder="Password" name="password" type="password" class="form-control"
 									required>
@@ -60,7 +60,7 @@
 						</div> --->
 							<button type="submit" class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold login-button">Sign
                                 In</button>
-                                <a href="/customer/signup">Sign up here</a>
+                                <!-- <a href="/customer/signup">Sign up here</a> -->
 						</div>
 					</div>
 				</form>
