--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -2,8 +2,8 @@
 	<div class="sidebar-wrapper scrollbar scrollbar-inner">
 		<div class="sidebar-content">
 			<div class="user">
-				<div class="avatar-sm float-left mr-2">
-				</div>
+				<!-- <div class="avatar-sm float-left mr-2">
+				</div> -->
 				<div class="info">
 					<a data-toggle="collapse" href="#userCollapse" aria-expanded="true">
 						<span>
@@ -100,7 +100,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/upload/invoices')) { %> active <% } %>">
 					<a href="/customer/upload/invoices">
-						<i class="fa fa-dollar-sign"></i>
+						<i class="fa fa-download"></i>
 						<p>Upload Invoice </p>
 					</a>
 				</li>
