--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -100,7 +100,7 @@
 				</li>
 				<li class="nav-item <% if (page.includes('/upload/invoices')) { %> active <% } %>">
 					<a href="/customer/upload/invoices">
-						<i class="fa fa-download"></i>
+						<i class="fa fa-upload"></i>
 						<p>Upload Invoice </p>
 					</a>
 				</li>
