--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -32,36 +32,111 @@
 					</a>
 				</li>
 
+			
+
 				<li class="nav-section">
 					<span class="sidebar-mini-icon">
 						<i class="fa fa-ellipsis-h"></i>
 					</span>
 					<h4 class="text-section">Reports</h4>
 				</li>
-				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
+
+				<!-- Reports -->
+				<li class="nav-item <% if (page.includes('/reports/all-awb') || page.includes('/reports/package-detail') || page.includes('/reports/package') || page.includes('/reports/delivery-detail') )  { %> active <% } %>">
+					<a data-toggle="collapse" href="#report">
+						<i class="fas fa-building"></i>
+						<p>Reports</p>
+						<span class="caret"></span>
+					</a>
+					<div class="collapse <% if (page.includes('/reports/')) { %> active <% } %>" id="report">
+						<ul class="nav nav-collapse">
+							<!-- <li>
+										<a href="/warehouse/incoming-shiptment">
+											<span class="sub-item">Incoming Shipment</span>
+										</a>
+									</li> -->
+									
+				<li class="nav-item <% if (page.includes('/reports/all-awb')) { %> active <% } %>">
 					<a href="/reports/all-awb/status">
-						<i class="fa fa-file"></i>
-						<p>ALL AWB Report </p>
+						<!-- <i class="fa fa-file"></i> -->
+						<span class="sub-item">ALL AWB Report </span>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/package-detail')) { %> active <% } %>">
 					<a href="/reports/package-detail/reports">
-						<i class="fa fa-file"></i>
-						<p>Package Detail </p>
+						<!-- <i class="fa fa-file"></i> -->
+						<!-- <p>Package Detail </p> -->
+						<span class="sub-item">Package Detail </span>
+
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/package/status')) { %> active <% } %>">
 					<a href="/reports/package/status">
-						<i class="fa fa-file"></i>
-						<p>Package Status </p>
+						<!-- <i class="fa fa-file"></i> -->
+						<span class="sub-item">Package Status </span>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/report/')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/delivery-detail')) { %> active <% } %>">
 					<a href="/reports/delivery-detail/reports">
-						<i class="fa fa-file"></i>
-						<p>Delivery Detail </p>
+						<!-- <i class="fa fa-file"></i> -->
+						<span class="sub-item">Delivery Detail </span>
 					</a>
 				</li>
+
+				
+							<!--<li <% if (page.includes('/fll/awb/no-docs')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/awb/no-docs">
+									<span class="sub-item">No Docs</span>
+								</a>
+							</li>
+							<li <% if (page.includes('/fll/awb/list')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/awb/list">
+									<span class="sub-item">AirWay Bills</span>
+								</a>
+							</li>
+							<li <% if (page.includes('/fll/package/list')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/package/list">
+									<span class="sub-item">Packages on Hands</span>
+								</a>
+							</li>--->
+						
+							<!--<li <% if (page.includes('/fll/package/overviewfll/list')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/package/overviewfll/list">
+									<span class="sub-item">Overview FLL</span>
+								</a>
+							</li>-->
+						</ul>
+					</div>
+				</li>
+
+
+
+
+
+
+
+
+
+
+				<!-- Reports -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 				<li class="nav-item <% if (page.includes('/reports/all-report/download')) { %> active <% } %>">
 					<a href="/reports/all-report/download">
 						<i class="fa fa-download"></i>
