--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -82,6 +82,12 @@
 						<span class="sub-item">Delivery Detail </span>
 					</a>
 				</li>
+				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+					<a href="/reports/package-report">
+						<!-- <i class="fa fa-file"></i> -->
+						<span class="sub-item">Package Report </span>
+					</a>
+				</li>
 
 				
 							<!--<li <% if (page.includes('/fll/awb/no-docs')) { %> class="active" <% } %>>
