Working Some tab

--- a/views/pages/reports/agingreport.ejs
+++ b/views/pages/reports/agingreport.ejs
@@ -37,7 +37,7 @@ var endate = new Date();
         <div class="d-flex align-items-right float-right ml-md-auto">
           <button 
           class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table');">
-          Download As CSV
+          Download As CSVCSV
         </button>
         
         </div>
