--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -134,7 +134,7 @@ var endate = new Date();
               <input type="hidden" name="filter_for" value="postBox" />
               
               <div class="col-md-2 pl-10">
-                <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_postbox_report()">
+                <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_postbox_report()">
                 <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
               </div>
             </div>
@@ -212,7 +212,7 @@ var endate = new Date();
             <input type="hidden" name="filter_for" value="9to5" />            
           <div class="col-md-2 pl-10">
             <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_ninetofive_package_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_ninetofive_package_report()">
           </div>
       </div>
       </form>
@@ -288,7 +288,7 @@ var endate = new Date();
               </div>
               <input type="hidden" name="filter_for" value="noDocs" />              
               <div class="col-md-2 pl-10">
-                <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;"  onclick="generate_nodocs_package_report()">
+                <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;"  onclick="generate_nodocs_package_report()">
                 <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
               </div>
             </div>
@@ -335,7 +335,7 @@ var endate = new Date();
             </div>  
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">        
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_users_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_users_report()">
           </div>
         </div>
       <div class="table-responsive ">
