--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -36,7 +36,7 @@ var endate = new Date();
             </div>  
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">        
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_allawb_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_allawb_report()">
           </div>
         </div>
         
@@ -79,7 +79,7 @@ var endate = new Date();
             </div>  
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">        
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_status_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_status_report()">
           </div>
         </div>
         <div class="table-responsive ">
@@ -155,7 +155,7 @@ var endate = new Date();
             <input type="hidden" name="filter_for" value="all_package_table" />
             
           <div class="col-md-2 pl-10">
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_detail_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_package_detail_report()">
           </div>
       </div>
       <!-- </form> -->
@@ -203,7 +203,7 @@ var endate = new Date();
             </div>  
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">        
-            <input type="button" value="Create CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_delivery_report()">
+            <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_delivery_report()">
           </div>
         </div>
         
