--- a/views/pages/reports/package-report.ejs
+++ b/views/pages/reports/package-report.ejs
@@ -381,6 +381,7 @@ var endate = new Date();
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/snapshot/package/list-all-report.js"></script>')%></div>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
 
 
 <script>
