--- a/views/pages/reports/agingreport.ejs
+++ b/views/pages/reports/agingreport.ejs
@@ -35,10 +35,8 @@ var endate = new Date();
         <div class="card-title"><%= title %></div>
         
         <div class="d-flex align-items-right float-right ml-md-auto">
-          <button 
-          class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table');">
-          Download As CSVCSV
-        </button>
+          <input type="button" value="Generate CSV Aging report" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="gen_aging_report()">
+   
         
         </div>
       </div>
@@ -50,7 +48,8 @@ var endate = new Date();
         </select>
       </div>
       <div class="card-body    <% if (!query.customerId && !query.locationId) { %> daterangepickerbody <% } %>">
-        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+
+        <input type="hidden"  name="clear" id="gen_aging_daterange" id="clear" value="<%=clear%>">
         <input type="hidden" id="daterange" value="<%=daterange%>">
         <input type="hidden" id="page" value="<%=page%>">
         <input type="hidden" id="customer" value="<%=query.customerId%>">
@@ -382,6 +381,7 @@ var endate = new Date();
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/snapshot/package/list-all-report.js"></script>')%>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
 
 
 <script>
