--- a/views/pages/reports/awbreport.ejs
+++ b/views/pages/reports/awbreport.ejs
@@ -18,6 +18,7 @@ var endate = new Date();
       <div class="card-header">
         <div class="row row-nav-line">
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
+            <input type="button" value="Generate CSV Awb report" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="gen_awb_report()">
 
           </ul>
         </div>
@@ -30,7 +31,7 @@ var endate = new Date();
         </select>
       </div>
       <div class="card-body daterangepickerbody">
-          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+          <input type="hidden" name="clear" id="daterange_awbreport" id="clear" value="<%=clear%>">
           <input type="hidden" id="daterange" value="<%=daterange%>">
           <input type="hidden" id="page" value="<%=page%>">
            <div class="col-xs-12 col-sm-12 float-right">
@@ -203,3 +204,4 @@ var endate = new Date();
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/snapshot/awb/list.js"></script>')%>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
