--- a/views/pages/reports/locationreport.ejs
+++ b/views/pages/reports/locationreport.ejs
@@ -37,11 +37,8 @@ var endate = new Date();
         <div class="card-title"><%= title %></div>
       
         <div class="d-flex align-items-right float-right ml-md-auto">
-          <button 
-            class="btn btn-primary btn-round float-right mr-2 ml-md-auto" onclick="download_table_as_csv('package-table');">
-            Download As CSV
-          </button>
-      
+          <input type="button" value="Generate CSV location report" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="gen_location_report()">
+         
         </div>
       </div>
       <div id="myLoader"><img src="/img/preloader.gif"></div>
@@ -381,6 +378,7 @@ var endate = new Date();
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/snapshot/package/list-all-report.js"></script>')%></div>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
 
 
 <script>
