--- a/views/pages/reports/nodocsreport.ejs
+++ b/views/pages/reports/nodocsreport.ejs
@@ -31,7 +31,9 @@ var endate = new Date();
 <div class="gutters">
   <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
     <div class="card">
-      <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
+      <input type="button" value="Generate CSV Nodocs report" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="gen_nodocs_report()">
+
+      <!-- <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title"><%= title %></div>
         <% if(!query.customerId && !query.locationId) {%>
         
@@ -58,7 +60,7 @@ var endate = new Date();
           <% } %>
         </div>
         <% } %>              
-      </div>
+      </div> -->
       <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div style="padding: 15px 0 0 35px;">
         <select name="search_collection" id="search_collection"  class="form-control" style="width: 33%; float: left;">
@@ -67,7 +69,7 @@ var endate = new Date();
         </select>
       </div>
       <div class="card-body    <% if (!query.customerId && !query.locationId) { %> daterangepickerbody <% } %>">
-        <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+        <input type="hidden" name="clear" id="daterange_nodocs" id="clear" value="<%=clear%>">
         <input type="hidden" id="daterange" value="<%=daterange%>">
         <input type="hidden" id="page" value="<%=page%>">
         <input type="hidden" id="customer" value="<%=query.customerId%>">
@@ -395,7 +397,8 @@ var endate = new Date();
   var nodoc = "<%=query.nodocs?query.nodocs:''%>";
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
-<% block('scripts').append('<script src="/js/warehouse/snapshot/package/list-all.js"></script>')%>
+<% block('scripts').append('<script src="/js/warehouse/snapshot/package/list-all-report.js"></script>')%>
+<% block('scripts').append('<script src="/js/reports/report.js"></script>')%>
 
 <script>
   function download_table_as_csv(table_id, separator = ',') {
