--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -42,7 +42,7 @@
 				</li>
 
 				<!-- Reports -->
-				<li class="nav-item <% if (page.includes('/reports/all-awb') || page.includes('/reports/package-detail') || page.includes('/reports/package') || page.includes('/reports/delivery-detail') )  { %> active <% } %>">
+				<li class="nav-item ">
 					<a data-toggle="collapse" href="#report">
 						<i class="fas fa-building"></i>
 						<p>Reports</p>
@@ -88,33 +88,33 @@
 						<span class="sub-item">Package Report </span>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/nodocsreport')) { %> active <% } %>">
 					<a href="/reports/nodocsreport">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">No Docs Package Report </span>
 					</a>
 				</li>
 		
-				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/agingreport')) { %> active <% } %>">
 					<a href="/reports/agingreport">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">Aging Report </span>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/locationreport')) { %> active <% } %>">
 					<a href="/reports/locationreport?locationId=load">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">Location Report </span>
 					</a>
 				</li>
 
-				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/awbreport')) { %> active <% } %>">
 					<a href="/reports/awbreport?type=airwaybill">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">AWB Report </span>
 					</a>
 				</li>
-				<li class="nav-item <% if (page.includes('/reports/package-report')) { %> active <% } %>">
+				<li class="nav-item <% if (page.includes('/reports/deliveryreport')) { %> active <% } %>">
 					<a href="/reports/deliveryreport">
 						<!-- <i class="fa fa-file"></i> -->
 						<span class="sub-item">Delivery Report </span>
