--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -48,7 +48,7 @@
 						<p>Reports</p>
 						<span class="caret"></span>
 					</a>
-					<div class="collapse <% if (page.includes('/reports/')) { %> active <% } %>" id="report">
+					<div class="collapse " id="report">
 						<ul class="nav nav-collapse">
 							<!-- <li>
 										<a href="/warehouse/incoming-shiptment">
